#summary ChangeLog for fookebox
#labels Featured,Phase-Deploy

== 0.1.1 ==

 * Fixed a bug where not all clients would be informed on playlist updates
 * Minor documentation updates