@@ -93,8 +93,11 @@ h1 {
 }
 
 #status {
-	float: right;
-	margin: 2px 2px 0 0;
+	position: absolute;
+	overflow: auto;
+	top: 92px;
+	right: 1px;
+	bottom: 0px;
 	width: 200px;
 }
 
